--- a/asst/morph_ui.html
+++ b/asst/morph_ui.html
@@ -8,8 +8,8 @@
     <script src="morph_ui/js/ui.js"></script>
     <script>
         // Change this to points to your image
-        path1       = 'Input/mfsyed.png';
-        path2       = 'Input/mgomez12.png';
+        path1       = 'Input/smile.png';
+        path2       = 'Input/frown.png';
 
         // ----- Don't change what's below --------
         imagewidth  = 0;
